# ITMO-SE-CIRCULAR-BUFFER

./: CMakeLists.txt  README.md
.github/workflows/: cicd.yml
lib/: circular_buffer.h
tests/: CMakeLists.txt  allocator_ut.cpp  coverage.cmake  ext_buffer_ut.cpp  named_requirements_ut.cpp  no_default_constructible_ut.cpp  simple_ut.cpp
